fixed the budget handlebars to align fields

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -130,7 +130,8 @@ main {
   margin-bottom: 100px;
 
 }
-#budget_input {
+
+#budget_inputs {
 display: flex;
 flex-direction: column;
 align-items: center;
